fix: cleaning vector module v6